// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test community action return error while trying to get community messages 1`] = `
Array [
  Object {
    "type": "LOADING",
  },
  Object {
    "data": "internal error",
    "type": "GET_COMMUNITY_MESSAGES_ERROR",
  },
]
`;

exports[`test community action returns error while trying to delete a community message 1`] = `
Array [
  Object {
    "type": "LOADING",
  },
  Object {
    "data": "sorry, you cannot delete this message",
    "type": "DELETE_ERROR",
  },
]
`;

exports[`test community action successfully deletes a community message 1`] = `
Array [
  Object {
    "type": "LOADING",
  },
  Object {
    "data": "sorry, you cannot delete this message",
    "type": "DELETE_ERROR",
  },
]
`;

exports[`test community action successfully get all community messages 1`] = `
Array [
  Object {
    "type": "LOADING",
  },
  Object {
    "data": undefined,
    "type": "GET_COMMUNITY_MESSAGES",
  },
]
`;
